--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 				<li>Video development </li>
 				<li>Sport development</li>
 				<li>Mobile development</li>
-			    <li>Web development</li>
+			    <!-- <li>Web development</li> -->
 	</ul>
 </body>
 
